# yop-cloud

./: .dockerignore  .env  .env.example  .gitignore  .tg-bot.env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  logger.json  main.py  pyproject.toml  requirements.txt
app/: dependencies.py  exceptions.py  logger.py  main.py  models.py  router.py  services.py  settings.py
nginx/: default.conf
writer/: Dockerfile  pyproject.toml
writer/app/: main.py
writer/app/api/: main.py
writer/app/core/: config.py
writer/app/schemas/: models.py
